<resources>
    <string name="app_name">bakatumu</string>
    <string name="app_title">bakatumu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="err_msg_name">Enter full name</string>
    <string name="err_msg_email">Email tidak valid</string>
    <string name="err_msg_phone">Nomor HP tidak valid</string>
    <string name="title_activity_chat_room_discussion">ChatRoomDiscussionActivity</string>
    <string name="title_activity_pm">Private Messaging</string>
    <string name="action_user">Users</string>
    <string name="action_chat">Chats</string>
    <string name="action_chat_room">Rooms</string>
    <string name="action_logout">Logout</string>
    <string name="hotlist">Hotlist</string>
    <string name="action_aer">beliAer</string>
    <string name="action_home">Beranda</string>
    <string name="action_message">Pesan</string>
    <string name="action_refresh">Reload</string>
    <string name="input_nohp">Nomor HP</string>
    <string name="input_password">Password</string>
    <string name="input_nama_lengkap">Nama Lengkap</string>
    <string name="input_email">Email</string>
    <string name="input_alamat">Alamat</string>
</resources>
