<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_home"
        android:title="@string/action_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/action_message"
        android:title="@string/action_message"
        android:icon="@drawable/ic_mail_outline"
        app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"/>

</menu>