<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">
    <item
        android:id="@+id/action_chat_room"
        android:orderInCategory="100"
        android:title="@string/action_chat_room"
        android:icon="@drawable/ic_chat_room"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_user"
        android:orderInCategory="100"
        android:title="@string/action_user"
        android:icon="@drawable/ic_user"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_aer"
        android:orderInCategory="100"
        android:title="@string/action_aer"
        android:icon="@drawable/ic_aer"
        app:showAsAction="ifRoom|withText" />
    <!--
    <item
        android:id="@+id/action_chat"
        android:orderInCategory="100"
        android:title="@string/action_chat"
        android:icon="@drawable/ic_chat"
        app:showAsAction="always" />
-->

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
