<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_full"
    android:paddingLeft="@dimen/activity_horizontal_full"
    android:paddingRight="@dimen/activity_horizontal_full"
    android:paddingTop="@dimen/activity_vertical_full"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.DaftarActivity"
    tools:showIn="@layout/activity_daftar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:background="@drawable/bg_radial_gradient">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/welcome_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20sp"
                    android:text="Daftar Baru"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/welcome_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/welcome_message"
                    android:layout_centerHorizontal="true"
                    android:text="Silahkan isi data anda"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="14sp" />

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_nohp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_nohp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_password" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_nama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_nama_lengkap" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_email" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_alamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_alamat" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/ButtonLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:baselineAligned="false">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/ic_cancel"
                    app:backgroundTint="@android:color/holo_red_light" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/btn_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/ic_check"
                    app:backgroundTint="#34af00" />

            </RelativeLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:indeterminateTint="@color/colorAccent"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>
